# High-Performance-Limit-Order-Book-LOB-Simulator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
benchmarks/: bench_match_engine.cpp
bindings/python/: __init__.py
bindings/python/examples/: depth_snapshot_demo.py  market_data_replay_demo.py  market_maker_demo.py  multi_symbol_demo.py  quickstart.py
cpp/include/lob/: BookLevel.h  Config.h  Events.h  LimitBook.h  MarketDataFeed.h  MarketDataReplay.h  MatchingEngine.h  MultiSymbolEngine.h  Order.h  OrderId.h  Pool.h  Price.h  RingBuffer.h  Side.h  TimeSource.h  WebSocketFeed.h
cpp/src/: LimitBook.cpp  MarketDataFeed.cpp  MatchingEngine.cpp  Price.cpp  pybind_module.cpp
docs/: COMPLETION_REPORT.md  FPGA_ACCELERATION.md  IMPLEMENTATION_SUMMARY.md  visualization.html
tests/cpp/: CMakeLists.txt  test_book_basic.cpp  test_engine_fills.cpp  test_new_features.cpp
tests/python/: test_api.py
tools/: generate_order_flow.py
